// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompaniesFilter should render the filter company_name 1`] = `
Object {
  "name": Object {
    "_eq": "Airbnb",
  },
}
`;

exports[`CompaniesFilter should render the filter company_name 2`] = `
Object {
  "_not": Object {
    "name": Object {
      "_eq": "Airbnb",
    },
  },
}
`;

exports[`CompaniesFilter should render the filter domainName 1`] = `
Object {
  "domain_name": Object {
    "_eq": "airbnb.com",
  },
}
`;

exports[`CompaniesFilter should render the filter domainName 2`] = `
Object {
  "_not": Object {
    "domain_name": Object {
      "_eq": "airbnb.com",
    },
  },
}
`;

exports[`CompaniesFilter should render the serch company_name with the searchValue 1`] = `
Object {
  "name": Object {
    "_ilike": "%Search value%",
  },
}
`;

exports[`CompaniesFilter should render the serch domainName with the searchValue 1`] = `
Object {
  "domain_name": Object {
    "_ilike": "%Search value%",
  },
}
`;
